updates in CSS and JS files

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 <meta http-equiv=“Expires” content=”-1″>
 <meta http-equiv=“CACHE-CONTROL” content=”NO-CACHE”>
 <link rel="stylesheet" href="css/master.css">
-<title>7 days Weather Forecast</title>
+<title>Weather Forecast</title>
 </head>
 
 <body>
     <div class="container">
         <h1>Weather Forecast</h1>
+        <h2>See real time weather forecast for the major cities from Europe</h2>
         <label for="locationSelect">Select Location:</label>
         <select id="locationSelect"></select>
         <button onclick="getWeather()">Get Forecast</button>
