--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 <link rel="icon" type="image/png" href="images/icon.png" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 <meta http-equiv=“Pragma” content=”no-cache”>
 <meta http-equiv=“Expires” content=”-1″>
